argocd/app/prometheus/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/part-of: prometheus
    self-monitor: "true"
spec:
  ports:
  - name: http-web
    port: 9090
    targetPort: 9090
  - name: reloader-web
    appProtocol: http
    port: 8080
    targetPort: reloader-web
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus
  sessionAffinity: None
  type: "ClusterIP"
