argocd/app/prometheus/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#    traefik.ingress.kubernetes.io/router.middlewares: media-forward-auth-all@kubernetescrd,media-forward-auth@kubernetescrd
  name: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/part-of: prometheus
spec:
  ingressClassName: traefik-external
  rules:
    - host: "TO_BE_FILLED"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - hosts: []
      secretName: tls-prometheus-ingress
